<resources>
    <string name="app_name">FinalProject2</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="username">Enter Username</string>
    <string name="name">Username:</string>
    <string name="password">Password:</string>
    <string name="Password">Enter Password</string>
    <string name="login">Log In</string>
    <string name="log_in">Log In</string>
    <string name="register">Register</string>
    <string name="Register">Register</string>
    <string name="MainButton">Click Here</string>

</resources>
