<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/r">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/username"
        android:ems="10"
        android:hint="@string/username"
        android:layout_alignBottom="@+id/textview"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="20dp"
        android:inputType="text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:id="@+id/textview"
        android:textSize="25sp"
        android:layout_marginTop="52dp"
        android:layout_below="@+id/textview2"
        android:layout_alignRight="@+id/Log_in"
        android:layout_alignEnd="@+id/Log_in" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:id="@+id/textView2"
        android:textSize="25sp"
        android:layout_below="@+id/textview"
        android:layout_alignLeft="@+id/textview"
        android:layout_alignStart="@+id/textview" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editText"
        android:hint="@string/Password"
        android:layout_alignBottom="@+id/textView2"
        android:layout_toRightOf="@+id/Log_in"
        android:layout_toEndOf="@+id/Log_in" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/login"
        android:id="@+id/textview2"
        android:textColor="#ff0829"
        android:textStyle="bold"
        android:typeface="serif"
        android:textSize="35sp"
        android:layout_marginTop="112dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log_in"
        android:id="@+id/Log_in"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/textView2"
        android:layout_toLeftOf="@+id/username"
        android:layout_toStartOf="@+id/username" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:id="@+id/register"
        android:layout_alignTop="@+id/Log_in"
        android:layout_alignRight="@+id/editText"
        android:layout_alignEnd="@+id/editText"
        android:layout_marginRight="60dp"
        android:layout_marginEnd="60dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Back"
        android:id="@+id/back1"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
</RelativeLayout>